tests/baselines/reference/ambientExternalModuleWithRelativeModuleName.errors.txt
==== tests/cases/compiler/ambientExternalModuleWithRelativeModuleName.ts (1 errors) ====
    declare module "./relativeModule" {
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2196: Ambient external module declaration cannot specify relative module name.
        var x: string;
    }